  DELETE, I_DELETE, and LOAD.

- If the evaluation of an expression fails Duro D/T no longer retries with
  a transaction to read operators from the catalog.
  Replaced Duro_evaluate_retry() and  Duro_expr_type_retry() by Duro_evaluate()
  and Duro_expr_type().

- Added function Duro_evaluate() which does not start a transaction.

- Database environments are by default opened with the DB_CREATE flag.

- Dropped RDB_get_update_op_e(). RDB_get_update_op() now has the same signature
  as RDB_get_update_op_e() previously had.

- RDB_rollback_all() is available in rdb.h.

- Added arguments getfnp and getarg to RDB_extend_tuple() for retrieving
  variables.

- Added type datetime.

- Creation time of user-defined operators is stored in the catalog.

- Fixed a bug in the handling of string literals in user-defined operators.

- Generic tuple types now allowed in operator parameters.

- Replaced fatal_error by data_corruption_error and run_recovery_error.

- Java interface: DException now extends RuntimeException.

- Added built-in read-only operators strfind_b(), substr_b(), and strlen_b().

DuroDBMS 0.25

- Added support for modules.

- I/O, system, and www operators are now in system-provided modules io, sys,
  and www, respectively. 

- Fixed bug in opening secondary indexes that could cause index corruption.

- Assignment of virtual and public tables using := is now supported.

- Added RDB_drop_table_by_name(), solving the problem of dropping unmapped
  public tables.

- DROP VAR and RENAME VAR are now generally prohibited in FOR .. IN loops.

- Improved error handling in Duro D/T. If an error occurs while executing
  a user-defined operator, the operator name is shown. The line where
  the error occured is identified with greater accuracy.

- Added type check to RDB_obj_set_property().

DuroDBMS 0.24

- Added error type type_not_found_error.

- Type definition now supports ORDERED.
  Added flags argument to RDB_define_type() and -ordered option